Bug 1517385 - Use "visibility: hidden" to keep the frame of AccessibleCaret alive. r=TYLin
Differential Revision: https://phabricator.services.mozilla.com/D94072

UltraBlame original commit: 2d480000f34ebdb1b02bf671dafd89b5a1a228f7

--- a/layout/style/res/ua.css
+++ b/layout/style/res/ua.css
@@ -2161,6 +2161,26 @@ display
 none
 ;
 }
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+hidden
+{
+visibility
+:
+hidden
+;
+}
 media
 (
 min
